--- a/react-shop/src/App.scss
+++ b/react-shop/src/App.scss
@@ -6,3 +6,7 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+.bg-black-05{
+    background-color: rgba($color: #000000, $alpha: 0.5);
+}
